--- a/app/src/main/res/layout/layout_featured_item.xml
+++ b/app/src/main/res/layout/layout_featured_item.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_margin="4dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:contentPadding="4dp">
+        app:cardElevation="4dp"
+        app:contentPadding="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +30,10 @@
                 android:id="@+id/text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:lines="1"
                 android:textColor="@color/white"
+                android:layout_margin="8dp"
+                android:textSize="16sp"
                 tools:text="你好啊" />
         </LinearLayout>
 
