--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="gray">#141414</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">@android:color/white</color>
+    <color name="white_gray">#e6e6e6</color>
 </resources>
